# aisd

./: CMakeLists.txt  link.url  main.cpp
algorithms/: CMakeLists.txt  interfaces.hpp
algorithms/myrand/: CMakeLists.txt  myrand.cpp  myrand.hpp
cmakes/: attach_package.cmake
collections/: collections.hpp  collections_tests.hpp  interfaces.h
collections/list/: CMakeLists.txt  list.hpp
collections/map/: CMakeLists.txt  map.hpp
collections/pair/: CMakeLists.txt  pair.cpp  pair.hpp
collections/set/: CMakeLists.txt  set.hpp
sorters/: CMakeLists.txt  sorter.cpp  sorter.hpp
sorters/bubble_sort/: bubble_sort.hpp
sorters/insertion_sort/: CMakeLists.txt  insertion_sort.hpp
